# secureGPT2

./: CMakeLists.txt  README.md  compile_commands.json  justfile  network.sh  rm_network.sh
src/: channel.h  ckks_evaluator.cpp  ckks_evaluator.h  client.cpp  client.h  gelu.cpp  layer_norm.cpp  main.cpp  matrix_mul.cpp  params.h  server.cpp  server.h  softmax.cpp  thread_pool.h  thread_pool_mgr.cpp  thread_pool_mgr.h  util.h
